--- a/q/275739.html
+++ b/q/275739.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>111</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
-<tr d-ix="1"><td>041</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
-<tr d-ix="2"><td>137</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
-<tr d-ix="3"><td>058</td><td>Perl 5</td><td>240924T180047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275759#275759">Xcali</a></td></tr>
-<tr d-ix="4"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
-<tr d-ix="5"><td>062</td><td>Bash</td><td>240924T170310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275756#275756">Digital </a></td></tr>
-<tr d-ix="6"><td>070</td><td>Python 3</td><td>240924T084616Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275743#275743">xnor</a></td></tr>
-<tr d-ix="7"><td>026</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
+<tr d-ix="0"><td>024</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
+<tr d-ix="1"><td>111</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
+<tr d-ix="2"><td>041</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
+<tr d-ix="3"><td>137</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
+<tr d-ix="4"><td>058</td><td>Perl 5</td><td>240924T180047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275759#275759">Xcali</a></td></tr>
+<tr d-ix="5"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
+<tr d-ix="6"><td>062</td><td>Bash</td><td>240924T170310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275756#275756">Digital </a></td></tr>
+<tr d-ix="7"><td>070</td><td>Python 3</td><td>240924T084616Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275743#275743">xnor</a></td></tr>
 <tr d-ix="8"><td>104</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
 <tr d-ix="9"><td>016</td><td>Jelly</td><td>240924T124136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275750#275750">Jonathan</a></td></tr>
 <tr d-ix="10"><td>164</td><td>Fortran GFortran</td><td>240924T094254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275746#275746">roblogic</a></td></tr>
@@ -44,7 +44,31 @@
 <tr d-ix="15"><td>163</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
 <tr d-ix="16"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, 111 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>27</s> <s>26</s> 24 bytes</h1>
+<pre><code>ＦＸχχ«´¿´⁼Ｉι´θ§⪪evenodd⁴ι
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6Fjfz0_KLFDQC8stTizQMDXQUjDQ1Faq5OAOKMvNKNJQO7X_UuEdJ0xom4JxYXKKRqYkQUDq3A0nascQzLyW1QiO4ICcTKJdalpqXn5KipKNgoqmjANZWu6Q4KbkYavnyaCXdshylWCgXAA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code and only goes up to 100 (the default interpreter can't actually handle deeply nested if statements anyway). The resulting program has no header but technically has a footer for the purposes of the question. Explanation:</p>
+<pre><code>ＦＸχχ«
+</code></pre>
+<p>Loop more than enough times. (The remaining times count as part of the footer.)</p>
+<pre><code>´¿´⁼
+</code></pre>
+<p>Output the characters for <code>If</code> and <code>Equals</code>. (<code>´</code> is Charcoal's escape character.)</p>
+<pre><code>Ｉι
+</code></pre>
+<p>Output the current value.</p>
+<pre><code>´θ
+</code></pre>
+<p>Output the character that represents the (first) input. The program assumes default input where this will be a string.</p>
+<pre><code>§⪪evenodd⁴ι
+</code></pre>
+<p>Output <code>odd</code> or <code>even</code> depending on the parity of the current value.</p>
+<p>The resulting program is a giant nested if statement (Charcoal will nest <code>if</code> unless it is the last statement in a block, which can't be readily arranged here):</p>
+<pre><code>¿⁼0θeven¿⁼1θodd¿⁼2θeven¿⁼3θodd¿⁼4θeven¿⁼5θodd¿⁼6θeven¿⁼7θodd...
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=VdQ9SoNBEAbgxpPYC9n_3bOIRUwiFmLAqL3nsImg4hFSCIIHsBZLTyKokOfrZt_mYXdn5v5lcT6_WqznF9vt08312VH_Ovh8f_u-e5197Fa3q8vfOnzs1svlbxmJ0z7OxGUfV-K2jzvx2MdhYoIG1QAbdANwUA7QQTuAR_HojcUjeBSP4FE8gkfxCJ7EE3iavDd4Ek_gSTyBJ_EEnsUzeBbP_rZ4Bs_iGTyLZ_AiXsCLeAEvk14DL-IFvIgX8Cpewat4Ba_i1U4Xr-BVvII38QbexBt4E2_gbTJn4E28gXfxDt7FO3gX7-BdvDvl4h18iA_wIT7Ah_gAH-IDfEx2zB_-uDldbP7X3PPx4dH88ORh9nf8AQ" rel="nofollow noreferrer">Attempt This Online!</a> Link only goes up to 100 and includes AST for convenience. Explanation: See generator for what the individual characters mean.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, 111 bytes</h1>
 <pre class="lang-nim prettyprint-override"><code>echo&quot;proc(n:int)=echo(case n&quot;
 for i in 0..4294967295:echo &quot;of &quot;,i,&quot;:&quot;,repr [&quot;even&quot;,&quot;odd&quot;][i%%2]
 echo&quot;else: $0)&quot;
@@ -62,7 +86,7 @@ of 4294967295:&quot;odd&quot;
 else: $0)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Uiua, 41 bytes</h1>
+<div id="pu2" class="pu"><h1>Uiua, 41 bytes</h1>
 <pre><code>&amp;p@)⍥(&amp;p$ |&quot;odd&quot;|&quot;even&quot;
 )ⁿ5 2&amp;p$ ⨬(&quot;even&quot;
 </code></pre>
@@ -79,7 +103,7 @@ else: $0)
 </code></pre>
 <p><a href="https://uiua.org/docs/switch" rel="nofollow noreferrer"><code>⨬ - switch</code></a>, when given N, runs the code in its Nth branch.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> 137 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> 137 bytes</h1>
 
 <pre class="lang-cpp prettyprint-override"><code>#import&lt;cstdio&gt;
 int i;f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i++&amp;1?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
@@ -90,13 +114,13 @@ int i;f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(;printf(&q
 <p>Thanks to Neil for suggesting changing <code>printf</code> to <code>puts</code>.</p>
 <p>Borrows from the <a href="https://codegolf.stackexchange.com/a/275753/119678">C (gcc) answer</a>.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 58 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 58 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>say'$_=&lt;&gt;';say&quot;;\$_-$_||say &quot;,(even,odd)[$_%2]for 0..2**32
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/784sVJdJd7Wxk7dGshUso5RiddVia@pAXIUlHQ0UstS83TyU1I0o1XiVY1i0/KLFAz09Iy0tIyN/v//l19QkpmfV/xf19dUz8DQAAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1>vim, 80 bytes</h1>
+<div id="pu5" class="pu"><h1>vim, 80 bytes</h1>
 <pre><code>a&quot;ncw
 1 odd
 2 even&lt;ESC&gt;oVkyPjj2&lt;C-V&gt;&lt;C-A&gt;j2&lt;C-V&gt;&lt;C-A&gt;&lt;ESC&gt;0&quot;aDdd2147483647@ao&lt;C-V&gt;&lt;ESC&gt;&quot;npi:v/^&lt;C-V&gt;&lt;ESC&gt;A /d&lt;C-V&gt;&lt;ESC&gt;0D@&quot;
@@ -143,7 +167,7 @@ dw
 <p><a href="https://tio.run/##K/v/P1EpL7mcy1AhPyWFy0ghtSw1Tzo/LLsyICvLSIwRhKUNlBJdUlIMTRwS88WklfIKMq3K9OPEpB0V9FPEpA1cHJS4Usqluf7/BwA" rel="nofollow noreferrer" title="V (vim) – Try It Online">Try it online (with just the first 30 segments)</a></p>
 <p>For some reason, TIO doesn't want to execute the macro at the end of the generated code, so you'll have to run that one in vim. Save the output from the first TIO as a.vim, then open a file with a single number in it, and run <code>so! a.vim</code>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 62 (Theoretical)</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 62 (Theoretical)</h1>
 
 <pre class="lang-bash prettyprint-override"><code>f='(($1-%d))||echo'
 printf &quot;$f even
@@ -190,36 +214,12 @@ $f even
 </code></pre>
 <p><a href="https://tio.run/##S0oszvj/P81WXUNDxVBXNUVTs6YmNTkjX50rLb9IQyPT1khLy9DIOlNX11pTs1qhoCgzryRNQUklTSE/JYULSKWWpeZxKSmoZCqoROvqZsZa1/7/DwA" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 70 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 70 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>print(&quot;def f(n):f&quot;,*range(2**33),sep=&quot;==n==print('eovdedn'[n&amp;1::2]);&quot;)
 </code></pre>
 <p><a href="https://tio.run/##fdCxDsIgFIXhnacgDJZLOliw1WB4EuNgwkW7XAg2Jj49NmFwu/N3zvKX7/bK5C6ltlbqSptWEZNMmsAnNZr6oCdqa4yD8Y0lqBAohL4cMH8iRhpudJi8t3e4Kmj/Oz898jzxbHl2PJ94nnleeD4LITqCSLlKkivJ3nHeq@xp2g8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online (with <code>2**3</code> in place of <code>2**33</code>)</a></p>
 <p>If it's OK for the function to error out after printing, 1 byte can be saved by writing <code>&lt;print(...)</code> in place of <code>==print(...)</code>.</p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>27</s> 26 bytes</h1>
-<pre><code>´≡´ＳＦＸχχ⁺ι⪫´¦´¦§⪪evenodd⁴ι
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjeTAooy80o0lB51Lny_Z7OSpjVXWn6RgkZAfnlqkYahgY6CkaamAkRNQE5psUamjoJXfmaehtKhZYeWKekoOJZ45qWkVmgEF-RkAo1JLUvNy09JAUqYaOooZGoCgfWS4qTkYqh9y6OVdMtylGIXGkD4AA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code and only goes up to 100 (the default interpreter can't actually handle very big switch statements anyway). Explanation:</p>
-<pre><code>´≡´Ｓ
-</code></pre>
-<p>Output the header, which is <code>≡Ｓ</code>.</p>
-<pre><code>ＦＸχχ
-</code></pre>
-<p>Loop more than enough times. (The remaining times count as part of the footer.)</p>
-<pre><code>⁺ι⪫´¦´¦§⪪evenodd⁴ι
-</code></pre>
-<p>Output the current value, then either <code>¦odd¦</code> or <code>¦even¦</code> depending on its parity.</p>
-<p>The resulting program is a giant switch statement:</p>
-<pre><code>≡Ｓ0¦even¦1¦odd¦2¦even¦3¦odd¦4¦even¦5¦odd¦6¦even¦7¦odd¦...
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=RdO9TUMxFIbhgk3SR4r_j2dBFJebIApEJALswAxpEgksamip7hiULMAKFPj9XPotHln2Ocf3-XZ6mPfT3en09vR4s7bvi4-fl_Pv1-dmabvn3f3S3NL22-3SPCH0EAmph0woPRih9uCGCuvkOmAn2UE72Q7cSXfwXrzXrcV7eC_ew3vxHt6L9_BBfIAP41Xgg_gAH8QH-CA-wEfxET6Kj3p18RE-io_wUXyET-ITfBKf4NP4VfgkPsEn8Qk-i8_wWXyGz-KzpkZ8hs_iM3wRX-CL-AJfxBf4MqYSvogv8Cbe4E28wZt4gzfxpqkXb_BVfIWv4it8FV_hq_gKX8dWwb8erudDX-B2uVpPq6vz5v_4Bw" rel="nofollow noreferrer">Attempt This Online!</a> Link only goes up to 100 and includes AST for convenience. Explanation:</p>
-<pre><code>≡Ｓ
-</code></pre>
-<p>Switch on the input as a string.</p>
-<pre><code>0¦even¦...
-</code></pre>
-<p>Each segment is simply a pair of strings; the <code>¦</code>s delimit the strings. (Using Charcoal integer constants would have made the generating program too long.) The first string of each segment is simply the case value for each case in turn while the second is its literal value and if that case is taken then it implicitly prints.</p>
 </div>
 <div id="pu8" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike></strike> 104 bytes</h1>
 
