--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240926T201051Z
+"   /golfscore                                      20240926T202404Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/255302.html">Write a program that prints a program thats almo: 0255302</a>
 <a href="q/275739.html">Print 4 billion if statements                   : 0275739</a>
 <a href="q/275587.html">Implement a Monad                               : 0275587</a>
 <a href="q/230842.html">Days of the Week                                : 0230842</a>
