--- a/q/275739.html
+++ b/q/275739.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>101</td><td>Haskell</td><td>240926T212144Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275801#275801">Antonio </a></td></tr>
-<tr d-ix="1"><td>059</td><td>Bash</td><td>240924T170310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275756#275756">Digital </a></td></tr>
-<tr d-ix="2"><td>184</td><td>Sed</td><td>240926T133227Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275792#275792">Toby Spe</a></td></tr>
-<tr d-ix="3"><td>095</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
-<tr d-ix="4"><td>093</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
-<tr d-ix="5"><td>110</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
-<tr d-ix="6"><td>042</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
+<tr d-ix="0"><td>041</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
+<tr d-ix="1"><td>101</td><td>Haskell</td><td>240926T212144Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275801#275801">Antonio </a></td></tr>
+<tr d-ix="2"><td>059</td><td>Bash</td><td>240924T170310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275756#275756">Digital </a></td></tr>
+<tr d-ix="3"><td>184</td><td>Sed</td><td>240926T133227Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275792#275792">Toby Spe</a></td></tr>
+<tr d-ix="4"><td>095</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
+<tr d-ix="5"><td>093</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
+<tr d-ix="6"><td>110</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
 <tr d-ix="7"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
 <tr d-ix="8"><td>136</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
 <tr d-ix="9"><td>022</td><td>MathGolf</td><td>240925T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275772#275772">Kevin Cr</a></td></tr>
@@ -47,14 +47,31 @@
 <tr d-ix="18"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
 <tr d-ix="19"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>105</s>, 101 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, <s>42</s> 41 bytes</h1>
+<pre><code>⍥(:⊙:+1:&amp;p◡$$ ⍥⋅&quot;_&quot;⊸=_
+)ⁿ31 2&quot;even&quot;0&quot;odd&quot;
+</code></pre>
+<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_2__4o2lKDriipk6KzE6JnDil6EkJCDijaXii4UiXyLiirg9Xwop4oG_NSAyImV2ZW4iMCJvZGQiCg==" rel="nofollow noreferrer">Uiua pad</a>. Uses <code>ⁿ5 2</code> (2^5) instead so it won't take forever.</p>
+<p>Gives the source for a function of the form:</p>
+<pre><code>⍥⋅&quot;even&quot;⊸=0
+⍥⋅&quot;odd&quot;⊸=1
+⍥⋅&quot;even&quot;⊸=2
+⍥⋅&quot;odd&quot;⊸=3
+⍥⋅&quot;even&quot;⊸=4
+⍥⋅&quot;odd&quot;⊸=5
+⍥⋅&quot;even&quot;⊸=6
+...
+⍥⋅&quot;odd&quot;⊸=4294967295
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>105</s>, 101 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>main=putStr$&quot;main=interact$f.read&quot;++do i&lt;-[0..2^32-1];&quot;;f &quot;++shows i&quot;=&quot;++show(cycle[&quot;even&quot;,&quot;odd&quot;]!!i)
 </code></pre>
 <p>-4 bytes thanks to xnor</p>
 <p><a href="https://tio.run/##y0gszk7Nyfn/PzcxM8@2oLQkuKRIRQnMycwrSS1KTC5RSdMrSk1MUdLWTslXyLTRjTbQ0zOKMzbSNYy1VrJOUwBKFGfklxcrZCrZQtkayZXJOanRSqllqXlKOkr5KSlKsYqKmZr//5sAAA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 59 (Theoretical)</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 59 (Theoretical)</h1>
 <ul>
 <li>3 bytes saved thanks to @NahuelFouilleul</li>
 </ul>
@@ -100,7 +117,7 @@ $f even
 </code></pre>
 <p><a href="https://tio.run/##BcExDoAgDADA3Vc0pCbFpIOsxJeogwqELmLQuKhvr3frcmbVVCqRDK7reueF2Vv7wFFlvxIYfNJANGHPbbD2feOWywclhAYTxDvujQEUwJFZZv@p/g" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1>Sed, 184 bytes</h1>
+<div id="pu3" class="pu"><h1>Sed, 184 bytes</h1>
 <p>I count 174 for the program and 10 bytes of input (since sed can't run without input)</p>
 <pre class="lang-sed prettyprint-override"><code>s,.*,s/&amp;/,
 :y
@@ -200,7 +217,7 @@ by
 </code></pre>
 <p><a href="https://tio.run/##Fc4xDoMwDAXQ3beoVDEglw8hJISrUGSpStQNWqWtxOnTeHq2B/@fU7w9928pmbuWMxowLSdlBgvY0HJQRi@QgDoMgl41gkEdBUa1glGdBFZ1gkn1AqfOAq8GwQz66M/1SFvXol55HcbJhw3cHDHWfERcMl85/dJe1zvXUH5rp77Wohc9zlKsCTY4b4L7Aw" rel="nofollow noreferrer" title="sed – Try It Online">Try it online.</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 95 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 95 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>${c=echo }case \$1 in
 for ((i=0;i&lt;2**32;i++));{
 $c&quot;$i)$c`((i%2))&amp;&amp;$c\odd||$c\even`;;&quot;
@@ -229,7 +246,7 @@ echo 'esac'
 </code></pre>
 <p>from here, the rest should be easy enough to follow, once you know that in bash, code in backticks is executed, then the backticks and their contained code are replaced by the standard output of that execution</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 93 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 93 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(i){puts(&quot;g(x){&quot;);for(i=0;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i--%2?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
 </code></pre>
@@ -237,7 +254,7 @@ echo 'esac'
 <p>-11 thanks to <a href="https://codegolf.stackexchange.com/users/11259/digital-trauma">Digital Trauma</a> and <a href="https://codegolf.stackexchange.com/users/119678/squarefinder">SquareFinder</a></p>
 <p><a href="https://tio.run/##LcxNCoMwEEDhvaeQgcAMJCBdOhQv4kYSI7NoIv4hhJw9DbVv/fGsWawtxaNQWs9jR1jwpgTEPm4o747XTcLhEW6jzqH/mRHUPlYCWrQYo14DzNccoIfoHJAWJn5muapc6qD9TBLwiuIoNe0/j8RNLl8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, <s> 111 </s> 110 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, <s> 111 </s> 110 bytes</h1>
 <pre class="lang-nim prettyprint-override"><code>echo&quot;proc(n:int)=echo(case n&quot;
 for i in 0..&lt;2 shl 32:echo &quot;of &quot;,i,&quot;:&quot;,repr [&quot;even&quot;,&quot;odd&quot;][i%%2]
 echo&quot;else: $0)&quot;
@@ -254,23 +271,6 @@ of 4:&quot;even&quot;
 of 4294967295:&quot;odd&quot;
 else: $0)
 </code></pre>
-</div>
-<div id="pu6" class="pu"><h1>Uiua, 42 bytes</h1>
-<pre><code>&amp;p@)⍥(&amp;p$ |&quot;odd&quot;|&quot;even&quot;
-)ⁿ31 2&amp;p$ ⨬(&quot;even&quot;
-</code></pre>
-<p>Try it: <a href="https://uiua.org/pad?src=0_13_0-dev_2__JnBAKeKNpSgKICAmcCQgfCJvZGQifCJldmVuIgop4oG_MTAgMiZwJCDiqKwoImV2ZW4iCg==" rel="nofollow noreferrer">Uiua pad</a>. Uses <code>ⁿ10 2</code> (2^10) instead so it won't take forever.</p>
-<p>Gives the source for a function of the form:</p>
-<pre><code>⨬(&quot;even&quot;|&quot;odd&quot;
-|&quot;even&quot;|&quot;odd&quot;
-|&quot;even&quot;|&quot;odd&quot;
-|&quot;even&quot;|&quot;odd&quot;
-|&quot;even&quot;|&quot;odd&quot;
-... a few billion lines later
-|&quot;even&quot;|&quot;odd&quot;
-)
-</code></pre>
-<p><a href="https://uiua.org/docs/switch" rel="nofollow noreferrer"><code>⨬ - switch</code></a>, when given N, runs the code in its Nth branch.</p>
 </div>
 <div id="pu7" class="pu"><h1>vim, 80 bytes</h1>
 <pre><code>a&quot;ncw
